--- a/ui-to-test/src/pages/Page.css
+++ b/ui-to-test/src/pages/Page.css
@@ -1,11 +1,79 @@
-.vertical-center {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-
 .horizontal-center {
     text-align: center;
 }
+
+.centered-text {
+    height: 40%;
+    text-align: center;
+}
+
+.height-stub {
+    height: 30%;
+}
+
+.container {
+    width: 100%;
+    background: #f2f2f2;
+}
+
+.nav {
+    height: 100%;
+    width: 30%;
+    background: #d4d7dc;
+    float: left;
+    box-sizing: border-box;
+}
+
+.section {
+    float: left;
+}
+
+ul {
+    list-style: none;
+    padding-inline-start: 0px;
+}
+
+.section {
+    width: 60%;
+    margin: 5%;
+    float: left;
+    box-sizing: border-box;
+}
+
+.footer {
+    background: #acb3b9;
+}
+
+body {
+    margin: 0px;
+}
+
+html,
+body,
+#root,
+.App,
+.container {
+    height: 100%;
+}
+
+.header {
+    background: #acb3b9;
+    position: relative;
+    height: 10%;
+}
+
+.footer {
+    height: 10%;
+}
+
+.info {
+    height: 80%;
+}
+
+.menu-button {
+    padding: 10px;
+    width: 80%;
+    margin-left: 10%;
+    border-radius: 4px;
+}
+
